<resources>
    <string name="app_name">ClimUnla</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget tellus quis quam ullamcorper convallis. Suspendisse massa magna, commodo vel neque id, gravida ornare augue. Mauris luctus massa quis sapien vehicula, ac luctus ex ornare. Integer ut ultricies ex. Cras ullamcorper dui ac rutrum tristique. Sed leo nisl, tempor eget ultrices ultricies, mattis id turpis. Fusce in nisl non risus tempor dapibus at at augue. Duis nec pharetra urna. Nullam imperdiet elementum neque vel volutpat.\n\nAliquam iaculis ac orci eu mattis. Aenean vestibulum ac ligula ut gravida. Sed ut mattis risus. Duis bibendum nunc in urna suscipit, at laoreet diam elementum. Fusce eu lectus condimentum, pharetra neque vel, sodales est. Aenean eget vulputate velit. Nullam dignissim ex sed tempor dapibus. Phasellus congue malesuada eros, non consectetur eros tincidunt ac. Maecenas euismod libero vitae odio dignissim, vel ornare erat venenatis. Cras rutrum accumsan dui a blandit.\n\nInteger rutrum feugiat odio consequat maximus. Curabitur vehicula, erat ac dignissim aliquam, ipsum lectus feugiat leo, a maximus nisl erat eu lorem. Donec dignissim, erat in pellentesque tempor, nulla nibh laoreet massa, a feugiat leo nunc et ex. Ut posuere volutpat ipsum, in gravida orci fringilla quis. Pellentesque tempus elit luctus justo scelerisque elementum sit amet at arcu. Vivamus id nunc justo. Vestibulum posuere elit est, non maximus turpis aliquet vel. Curabitur commodo odio a justo consequat aliquam. Fusce porta cursus arcu vel ornare. Pellentesque finibus, purus vel varius semper, libero libero congue lacus, vehicula consequat nunc diam nec metus. Nam nec eros ac neque luctus bibendum. Curabitur varius, quam id convallis vulputate, lacus leo dictum augue, ac lacinia libero libero non tortor. Phasellus tempus leo odio, et facilisis leo rhoncus ut. Duis velit nunc, laoreet pretium euismod nec, congue nec purus.\n\nAliquam vehicula ullamcorper lorem, tempor semper justo eleifend vitae. Nulla enim justo, porttitor hendrerit molestie eget, suscipit sit amet lacus. Curabitur sollicitudin nisi vel enim hendrerit sagittis. Curabitur dignissim semper lectus, ac viverra tortor varius vitae. Donec ornare, magna id vehicula posuere, felis ante fringilla ipsum, eget imperdiet elit tortor quis purus. Nulla fringilla nunc eleifend mauris pharetra, et mattis ante sodales. Nunc eu leo sit amet ipsum ultrices iaculis vel sit amet ex. Ut congue turpis tellus, et sagittis turpis ultrices a. Nulla facilisi. Vestibulum at nulla in massa feugiat cursus eget eget risus. Cras non ante odio. Vestibulum a ligula posuere, sollicitudin arcu quis, iaculis orci. Donec gravida mattis faucibus. Vivamus eget fermentum tellus. Quisque vitae posuere mauris, et mattis elit.\n\nNullam in efficitur odio. Nulla vitae eros sit amet tortor laoreet mattis nec a orci. Quisque laoreet pretium nulla, vitae tincidunt libero dictum ac. In hac habitasse platea dictumst. Aenean nec quam lacinia, blandit justo non, fermentum eros. Etiam accumsan lectus ultricies sodales consequat. Ut in elementum mauris. Praesent tristique nunc eros, at elementum metus rhoncus rhoncus. Maecenas sagittis lacinia odio eget egestas. Aliquam vitae ipsum placerat, commodo diam id, suscipit urna. Quisque id tempus nunc. Donec nec ligula quis leo malesuada sagittis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce bibendum non lorem in posuere. Nunc eu est id ligula vulputate elementum. Mauris sed dui vitae diam cursus ornare vitae in elit.\n\nPellentesque pulvinar erat porttitor rhoncus rutrum. Etiam quis lacus tincidunt, finibus libero et, auctor lectus. Nunc nibh diam, consequat quis quam sed, faucibus auctor elit. Curabitur tristique, ipsum eu pulvinar tincidunt, ante ligula imperdiet nibh, porttitor tempor leo erat sit amet lectus. Nam velit nunc, eleifend in pharetra sed, porttitor sit amet sem. Fusce iaculis in justo sed scelerisque. Ut hendrerit massa eget ante rhoncus, luctus ornare diam porttitor. Nullam sit amet velit eros. Morbi sagittis egestas erat ac luctus. Suspendisse potenti. Praesent suscipit sit amet velit nec pellentesque. Morbi quis velit quis tellus aliquet blandit. Fusce nec dui quam. Donec aliquet massa sapien, in porttitor elit euismod at. Sed facilisis sagittis tristique. Morbi sed arcu vel massa volutpat lobortis quis non justo.\n\nDuis fermentum mauris nec maximus lacinia. Nulla id ipsum metus. Nam ac dapibus sem. Nam egestas elit ac mattis suscipit. Aliquam porttitor consectetur sem, consequat tempus nulla pulvinar at. Integer molestie libero sit amet neque mollis vestibulum. Etiam vulputate aliquam varius. Mauris faucibus augue eu sapien efficitur, vitae dapibus felis sollicitudin. Fusce dapibus lacinia commodo.\n\nSuspendisse vel mauris gravida, varius arcu eu, tempus elit. Sed in purus feugiat, consequat urna vitae, convallis ex. Nulla et leo vel ligula ornare dignissim. Sed eget purus et arcu tristique imperdiet sit amet vel ligula. Aliquam aliquet orci eget diam imperdiet scelerisque. Sed in risus id risus elementum facilisis et ac enim. Aenean dignissim, lacus sed finibus maximus, leo odio dignissim mi, hendrerit aliquet orci metus in mi.\n\nNunc congue eleifend nisl. Phasellus dictum purus eu nisl lobortis, a ultricies mauris tristique. In efficitur cursus massa. In nibh orci, aliquet non ligula ac, pretium fringilla nisl. Donec pretium orci eu odio feugiat varius. Aliquam sed gravida odio. Pellentesque vitae felis condimentum, ultricies nunc accumsan, fringilla odio.\n\nNulla fringilla tincidunt purus posuere molestie. Nunc leo mauris, pellentesque nec tellus in, ultrices viverra nibh. Pellentesque nec nulla sit amet metus efficitur congue. Curabitur eu auctor magna, sagittis eleifend arcu. Suspendisse at dui quam. Suspendisse in ultrices risus, sit amet imperdiet purus. Cras vitae sagittis ex, vitae porta neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut fringilla ex dolor, eu lacinia dui scelerisque non. Nunc ullamcorper ullamcorper justo, ac condimentum tortor aliquam sit amet. Sed volutpat ipsum non dui molestie laoreet. Nam id diam mattis felis tempor suscipit ac vel justo. Sed id varius nulla. Donec luctus ultrices dolor, ut fermentum nibh pretium non. Nulla lobortis neque quis lorem rutrum, at eleifend turpis sodales.\n\nUt a ligula accumsan, fringilla quam eget, sollicitudin tortor. Vestibulum ultrices aliquam arcu, quis lacinia massa pellentesque vitae. Pellentesque at congue urna, sed congue erat. Integer ornare lacinia interdum. Vestibulum laoreet risus vel cursus ultricies. Mauris eget mi diam. Etiam sollicitudin nunc ante, nec euismod ante vestibulum non. Phasellus sit amet purus augue. Nulla condimentum aliquam dolor, eget scelerisque nulla suscipit eu. Sed ultrices lacus vitae est viverra finibus. Nullam sed pulvinar lectus, vel porta eros. Etiam ut hendrerit libero. Nullam diam nulla, tempus ornare ullamcorper ac, feugiat non tortor.\n\nNullam et urna elit. Nulla facilisi. Quisque sollicitudin mi id placerat molestie. Etiam nulla lorem, iaculis a nisl vitae, feugiat porta velit. Fusce vel ex massa. Aliquam porta erat magna, eget fermentum tortor pulvinar sed. Ut augue tellus, lobortis sed tempus sit amet, sollicitudin quis erat. Cras urna felis, porta euismod nibh lobortis, imperdiet rutrum leo. Praesent auctor orci sit amet vestibulum vehicula. Fusce feugiat ante mattis metus commodo, at efficitur felis tempus. Quisque porta nibh aliquam, vulputate ex in, lacinia erat. Sed ut elit eu urna fringilla euismod. Pellentesque vehicula lectus convallis, fringilla ante eget, efficitur tortor. Aenean sagittis diam vitae tristique lobortis. Praesent dictum ligula eget elit rhoncus, a porta dolor euismod. Vivamus commodo a eros vel feugiat.\n\nNunc arcu lacus, gravida vitae porttitor ut, tempus in justo. Etiam pretium quis ligula a mollis. Praesent et bibendum urna, sit amet molestie erat. Mauris luctus nunc lacus, id mattis tellus maximus quis. Maecenas sagittis, dui id placerat tristique, diam sapien mollis lorem, at tristique nibh ligula a lacus. Quisque ante magna, interdum nec fermentum in, volutpat non lectus. In tincidunt lacinia mauris et lobortis. Morbi a leo libero. Aenean tempus sodales turpis, nec suscipit elit dignissim ac. Cras efficitur urna sit amet ligula vestibulum, quis commodo risus elementum. Duis enim erat, rhoncus id elit aliquet, commodo tincidunt lacus. Curabitur lobortis sapien at odio aliquam finibus. Nam vel augue ut quam porttitor dapibus. Vestibulum massa metus, iaculis sed consequat eu, rutrum at risus. Morbi feugiat feugiat arcu, in vestibulum leo aliquam ut.</string>
    <string name="D1">Lunes</string>
    <string name="D2">Martes</string>
    <string name="D3">Miercoles</string>
    <string name="D4">Jueves</string>
    <string name="D5">Viernes</string>
    <string name="D6">Sabado</string>
    <string name="D7">Domingo</string>
    <string name="titulo">ClimUnla</string>
    <string name="volver">Volver</string>
    <string name="volver">Volver</string>
    <string name="cambiarLugar">cambiarLugar\n</string>
    <string name="cerrarSesion">cerrarsesion\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>