<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/climunla"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/lunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D1"
                android:gravity="center|left"
                android:drawableEnd="@drawable/sol"
                android:backgroundTint="@color/violet"/>


            <Button
                android:id="@+id/martes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D2"
                android:gravity="center|left"
                android:drawableEnd="@drawable/nieve"
                android:backgroundTint="@color/violet"/>

            <Button
                android:id="@+id/miercoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D3"
                android:gravity="center|left"
                android:drawableEnd="@drawable/nublado"
                android:backgroundTint="@color/violet"/>


            <Button
                android:id="@+id/jueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D4"
                android:gravity="center|left"
                android:drawableEnd="@drawable/nublado"
                android:backgroundTint="@color/violet"/>


            <Button
                android:id="@+id/viernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D5"
                android:gravity="center|left"
                android:drawableEnd="@drawable/nieve"
                android:backgroundTint="@color/violet"/>


            <Button
                android:id="@+id/sabado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D6"
                android:gravity="center|left"
                android:drawableEnd="@drawable/nieve"
                android:backgroundTint="@color/violet"/>


            <Button
                android:id="@+id/domingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/D7"
                android:gravity="center|left"
                android:drawableEnd="@drawable/lluvia"
                android:backgroundTint="@color/violet"/>





        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>